@@ -17,27 +17,33 @@
 package org.apache.kafka.tools.streams;
 
 import org.apache.kafka.clients.admin.Admin;
+import org.apache.kafka.clients.admin.AdminClientTestUtils;
 import org.apache.kafka.clients.admin.DeleteStreamsGroupsOptions;
 import org.apache.kafka.clients.admin.DeleteStreamsGroupsResult;
 import org.apache.kafka.clients.admin.DeleteTopicsResult;
+import org.apache.kafka.clients.admin.DescribeStreamsGroupsOptions;
 import org.apache.kafka.clients.admin.DescribeStreamsGroupsResult;
+import org.apache.kafka.clients.admin.DescribeTopicsOptions;
+import org.apache.kafka.clients.admin.DescribeTopicsResult;
 import org.apache.kafka.clients.admin.GroupListing;
 import org.apache.kafka.clients.admin.KafkaAdminClient;
 import org.apache.kafka.clients.admin.ListGroupsOptions;
 import org.apache.kafka.clients.admin.ListGroupsResult;
 import org.apache.kafka.clients.admin.ListOffsetsResult;
 import org.apache.kafka.clients.admin.ListStreamsGroupOffsetsResult;
-import org.apache.kafka.clients.admin.MockAdminClient;
 import org.apache.kafka.clients.admin.StreamsGroupDescription;
 import org.apache.kafka.clients.admin.StreamsGroupMemberAssignment;
 import org.apache.kafka.clients.admin.StreamsGroupMemberDescription;
 import org.apache.kafka.clients.admin.StreamsGroupSubtopologyDescription;
+import org.apache.kafka.clients.admin.TopicDescription;
 import org.apache.kafka.clients.consumer.OffsetAndMetadata;
 import org.apache.kafka.common.GroupState;
 import org.apache.kafka.common.GroupType;
 import org.apache.kafka.common.KafkaFuture;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.TopicPartition;
+import org.apache.kafka.common.TopicPartitionInfo;
+import org.apache.kafka.common.internals.KafkaFutureImpl;
 import org.apache.kafka.test.TestUtils;
 
 import org.junit.jupiter.api.Test;
@@ -45,6 +51,7 @@ import org.mockito.ArgumentMatchers;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -52,7 +59,9 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 import joptsimple.OptionException;
 
@@ -71,21 +80,22 @@ import static org.mockito.Mockito.when;
 
 public class StreamsGroupCommandTest {
 
+    private static final Admin ADMIN_CLIENT = mock(KafkaAdminClient.class);
+    private static final String BOOTSTRAP_SERVERS = "localhost:9092";
+
     @Test
     public void testListStreamsGroups() throws Exception {
         String firstGroup = "first-group";
         String secondGroup = "second-group";
-        String bootstrapServer = "localhost:9092";
 
-        String[] cgcArgs = new String[]{"--bootstrap-server", bootstrapServer, "--list"};
-        Admin adminClient = mock(KafkaAdminClient.class);
+        String[] cgcArgs = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
         ListGroupsResult result = mock(ListGroupsResult.class);
-        when(result.all()).thenReturn(KafkaFuture.completedFuture(Arrays.asList(
+        when(result.all()).thenReturn(KafkaFuture.completedFuture(List.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
             new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))
         )));
-        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(result);
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs, adminClient);
+        when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(result);
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs);
         Set<String> expectedGroups = Set.of(firstGroup, secondGroup);
 
         final Set[] foundGroups = new Set[]{Set.of()};
@@ -99,11 +109,8 @@ public class StreamsGroupCommandTest {
 
     @Test
     public void testListWithUnrecognizedOption() {
-        String bootstrapServer = "localhost:9092";
-        String[] cgcArgs = new String[]{"--frivolous-nonsense", "--bootstrap-server", bootstrapServer, "--list"};
-        final Exception exception = assertThrows(OptionException.class, () -> {
-            getStreamsGroupService(cgcArgs, new MockAdminClient());
-        });
+        String[] cgcArgs = new String[]{"--frivolous-nonsense", "--bootstrap-server", BOOTSTRAP_SERVERS, "--list"};
+        final Exception exception = assertThrows(OptionException.class, () -> getStreamsGroupService(cgcArgs));
         assertEquals("frivolous-nonsense is not a recognized option", exception.getMessage());
     }
 
@@ -111,17 +118,15 @@ public class StreamsGroupCommandTest {
     public void testListStreamsGroupsWithStates() throws Exception {
         String firstGroup = "first-group";
         String secondGroup = "second-group";
-        String bootstrapServer = "localhost:9092";
 
-        String[] cgcArgs = new String[]{"--bootstrap-server", bootstrapServer, "--list", "--state"};
-        Admin adminClient = mock(KafkaAdminClient.class);
+        String[] cgcArgs = new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--list", "--state"};
         ListGroupsResult resultWithAllStates = mock(ListGroupsResult.class);
-        when(resultWithAllStates.all()).thenReturn(KafkaFuture.completedFuture(Arrays.asList(
+        when(resultWithAllStates.all()).thenReturn(KafkaFuture.completedFuture(List.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
             new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY))
         )));
-        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithAllStates);
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs, adminClient);
+        when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithAllStates);
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(cgcArgs);
         Set<GroupListing> expectedListing = Set.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)),
             new GroupListing(secondGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY)));
@@ -136,7 +141,7 @@ public class StreamsGroupCommandTest {
         when(resultWithStableState.all()).thenReturn(KafkaFuture.completedFuture(List.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE))
         )));
-        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithStableState);
+        when(ADMIN_CLIENT.listGroups(any(ListGroupsOptions.class))).thenReturn(resultWithStableState);
         Set<GroupListing> expectedListingStable = Set.of(
             new GroupListing(firstGroup, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.STABLE)));
 
@@ -152,8 +157,7 @@ public class StreamsGroupCommandTest {
 
     @Test
     public void testDescribeStreamsGroups() throws Exception {
-        String firstGroup = "group1";
-        Admin adminClient = mock(KafkaAdminClient.class);
+        String firstGroup = "foo-group";
         DescribeStreamsGroupsResult result = mock(DescribeStreamsGroupsResult.class);
         Map<String, StreamsGroupDescription> resultMap = new HashMap<>();
         StreamsGroupDescription exp = new StreamsGroupDescription(
@@ -167,10 +171,13 @@ public class StreamsGroupCommandTest {
             new Node(0, "bar", 0),
             null);
         resultMap.put(firstGroup, exp);
-
         when(result.all()).thenReturn(KafkaFuture.completedFuture(resultMap));
-        when(adminClient.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
-        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(null, adminClient);
+        when(ADMIN_CLIENT.describeStreamsGroups(ArgumentMatchers.anyCollection(),  any(DescribeStreamsGroupsOptions.class))).thenReturn(result);
+
+        StreamsGroupCommandOptions streamsGroupCommandOptions = new StreamsGroupCommandOptions(
+            new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--group", firstGroup, "--describe"});
+        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(streamsGroupCommandOptions, ADMIN_CLIENT);
+
         assertEquals(exp, service.getDescribeGroup(firstGroup));
 
         service.close();
@@ -179,7 +186,6 @@ public class StreamsGroupCommandTest {
     @Test
     public void testDescribeStreamsGroupsGetOffsets() throws Exception {
         String groupId = "group1";
-        Admin adminClient = mock(KafkaAdminClient.class);
 
         ListOffsetsResult startOffset = mock(ListOffsetsResult.class);
         Map<TopicPartition, ListOffsetsResult.ListOffsetsResultInfo> startOffsetResultMap = new HashMap<>();
@@ -192,14 +198,22 @@ public class StreamsGroupCommandTest {
         when(startOffset.all()).thenReturn(KafkaFuture.completedFuture(startOffsetResultMap));
         when(endOffset.all()).thenReturn(KafkaFuture.completedFuture(endOffsetResultMap));
 
-        when(adminClient.listOffsets(ArgumentMatchers.anyMap())).thenReturn(startOffset, endOffset);
+        when(ADMIN_CLIENT.listOffsets(ArgumentMatchers.anyMap())).thenReturn(startOffset, endOffset);
 
         ListStreamsGroupOffsetsResult result = mock(ListStreamsGroupOffsetsResult.class);
         Map<TopicPartition, OffsetAndMetadata> committedOffsetsMap = new HashMap<>();
         committedOffsetsMap.put(new TopicPartition("topic1", 0), new OffsetAndMetadata(12, Optional.of(0), ""));
 
-        when(adminClient.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
+        when(ADMIN_CLIENT.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
         when(result.partitionsToOffsetAndMetadata(ArgumentMatchers.anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
+
+        DescribeStreamsGroupsResult describeResult = mock(DescribeStreamsGroupsResult.class);
+        StreamsGroupDescription groupDescription = mock(StreamsGroupDescription.class);
+        StreamsGroupSubtopologyDescription subtopology = mock(StreamsGroupSubtopologyDescription.class);
+        when(ADMIN_CLIENT.describeStreamsGroups(List.of(groupId))).thenReturn(describeResult);
+        when(describeResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, groupDescription)));
+        when(groupDescription.subtopologies()).thenReturn(List.of(subtopology));
+        when(subtopology.sourceTopics()).thenReturn(List.of("topic1"));
 
         StreamsGroupMemberDescription description = new StreamsGroupMemberDescription("foo", 0, Optional.empty(),
             Optional.empty(), "bar", "baz", 0, "qux",
@@ -207,7 +221,7 @@ public class StreamsGroupCommandTest {
             new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()), new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()),
             false);
         StreamsGroupDescription x = new StreamsGroupDescription(
-            "group1",
+            groupId,
             0,
             0,
             0,
@@ -216,11 +230,10 @@ public class StreamsGroupCommandTest {
             GroupState.STABLE,
             new Node(0, "host", 0),
             null);
-        DescribeStreamsGroupsResult describeStreamsGroupsResult = mock(DescribeStreamsGroupsResult.class);
-        when(describeStreamsGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, x)));
-        when(adminClient.describeStreamsGroups(List.of(groupId))).thenReturn(describeStreamsGroupsResult);
+        StreamsGroupCommandOptions streamsGroupCommandOptions = new StreamsGroupCommandOptions(
+            new String[]{"--bootstrap-server", BOOTSTRAP_SERVERS, "--group", groupId, "--describe"});
 
-        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(null, adminClient);
+        StreamsGroupCommand.StreamsGroupService service = new StreamsGroupCommand.StreamsGroupService(streamsGroupCommandOptions, ADMIN_CLIENT);
         Map<TopicPartition, StreamsGroupCommand.OffsetsInfo> lags = service.getOffsets(x);
 
         assertEquals(1, lags.size());
@@ -236,109 +249,6 @@ public class StreamsGroupCommandTest {
         assertFalse(StreamsGroupCommand.StreamsGroupService.isGroupStateValid(GroupState.STABLE, 0));
         assertTrue(StreamsGroupCommand.StreamsGroupService.isGroupStateValid(GroupState.STABLE, 1));
         assertTrue(StreamsGroupCommand.StreamsGroupService.isGroupStateValid(GroupState.UNKNOWN, 1));
-    }
-
-    @Test
-    public void testRetrieveInternalTopics() {
-        Admin adminClient = mock(KafkaAdminClient.class);
-        String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete"));
-        List<String> sourceTopics = List.of("source-topic1", "source-topic2");
-        List<String> repartitionSinkTopics = List.of("rep-sink-topic1", "rep-sink-topic2");
-        Map<String, StreamsGroupSubtopologyDescription.TopicInfo> stateChangelogTopics = Map.of(
-            groupId + "-1-changelog", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
-            "some-pre-fix" + "-changelog", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
-            groupId + "-2-changelog", mock(StreamsGroupSubtopologyDescription.TopicInfo.class));
-        Map<String, StreamsGroupSubtopologyDescription.TopicInfo> repartitionSourceTopics = Map.of(
-            groupId + "-1-repartition", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
-            groupId + "-some-thing", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
-            groupId + "-2-repartition", mock(StreamsGroupSubtopologyDescription.TopicInfo.class));
-
-
-        Map<String, StreamsGroupDescription> resultMap = new HashMap<>();
-        resultMap.put(groupId, new StreamsGroupDescription(
-            groupId,
-            0,
-            0,
-            0,
-            List.of(new StreamsGroupSubtopologyDescription("subtopology1", sourceTopics, repartitionSinkTopics, stateChangelogTopics, repartitionSourceTopics)),
-            List.of(),
-            GroupState.DEAD,
-            new Node(0, "localhost", 9092),
-            null));
-        DescribeStreamsGroupsResult result = mock(DescribeStreamsGroupsResult.class);
-        when(result.all()).thenReturn(KafkaFuture.completedFuture(resultMap));
-        when(adminClient.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
-
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
-        Map<String, List<String>> internalTopics = service.retrieveInternalTopics(List.of(groupId));
-
-        assertNotNull(internalTopics.get(groupId));
-        assertEquals(4, internalTopics.get(groupId).size());
-        assertEquals(Set.of(groupId + "-1-changelog", groupId + "-2-changelog", groupId + "-1-repartition", groupId + "-2-repartition"),
-            new HashSet<>(internalTopics.get(groupId)));
-        assertFalse(internalTopics.get(groupId).stream().anyMatch(List.of("some-pre-fix-changelog", groupId + "-some-thing")::contains));
-        assertFalse(internalTopics.get(groupId).stream().anyMatch(sourceTopics::contains));
-        assertFalse(internalTopics.get(groupId).stream().anyMatch(repartitionSinkTopics::contains));
-
-        service.close();
-    }
-
-    @Test
-    public void testDeleteStreamsGroup() {
-        Admin adminClient = mock(KafkaAdminClient.class);
-        String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete"));
-
-        DeleteStreamsGroupsResult deleteStreamsGroupsResult = mock(DeleteStreamsGroupsResult.class);
-        when(adminClient.deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class))).thenReturn(deleteStreamsGroupsResult);
-        when(deleteStreamsGroupsResult.deletedGroups()).thenReturn(Map.of(groupId, KafkaFuture.completedFuture(null)));
-        DeleteTopicsResult deleteTopicsResult = mock(DeleteTopicsResult.class);
-        when(deleteTopicsResult.all()).thenReturn(KafkaFuture.completedFuture(null));
-        when(adminClient.deleteTopics(ArgumentMatchers.anyCollection())).thenReturn(deleteTopicsResult);
-        DescribeStreamsGroupsResult describeStreamsGroupsResult = mock(DescribeStreamsGroupsResult.class);
-        when(describeStreamsGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, mock(StreamsGroupDescription.class))));
-        when(adminClient.describeStreamsGroups(any())).thenReturn(describeStreamsGroupsResult);
-        ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
-        when(adminClient.listGroups(any())).thenReturn(listGroupsResult);
-        when(listGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(List.of(new GroupListing(groupId, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY)))));
-
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
-        service.deleteGroups();
-
-        verify(adminClient, times(1)).listGroups(any(ListGroupsOptions.class));
-        verify(adminClient, times(1)).deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class));
-        verify(adminClient, times(1)).describeStreamsGroups(any());
-        // because of having 0 internal topics, we do not expect deleteTopics to be called
-        verify(adminClient, times(0)).deleteTopics(ArgumentMatchers.anyCollection());
-
-        service.close();
-    }
-
-    @Test
-    public void testDeleteNonStreamsGroup() {
-        Admin adminClient = mock(KafkaAdminClient.class);
-        String groupId = "foo-group";
-        List<String> args = new ArrayList<>(Arrays.asList("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete"));
-
-        ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
-        when(adminClient.listGroups(any())).thenReturn(listGroupsResult);
-        when(listGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(List.of()));
-
-        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
-        Map<String, Throwable> result = service.deleteGroups();
-
-        assertNotNull(result.get(groupId));
-        assertEquals(result.get(groupId).getMessage(),
-            "Group '" + groupId + "' does not exist or is not a streams group.");
-        assertInstanceOf(IllegalArgumentException.class, result.get(groupId));
-        verify(adminClient, times(1)).listGroups(any(ListGroupsOptions.class));
-        // we do not expect any further API to be called
-        verify(adminClient, times(0)).deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class));
-        verify(adminClient, times(0)).describeStreamsGroups(any());
-        verify(adminClient, times(0)).deleteTopics(ArgumentMatchers.anyCollection());
-
-        service.close();
     }
 
     @Test
@@ -380,6 +290,157 @@ public class StreamsGroupCommandTest {
         assertThrow("   ,   ,");
     }
 
+    @Test
+    public void testAdminRequestsForResetOffsets() {
+        Admin adminClient = mock(KafkaAdminClient.class);
+        String groupId = "foo-group";
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--reset-offsets", "--input-topic", "topic1", "--to-latest");
+        List<String> topics = List.of("topic1");
+
+        when(adminClient.describeStreamsGroups(List.of(groupId)))
+            .thenReturn(describeStreamsResult(groupId, GroupState.DEAD));
+        when(adminClient.describeTopics(eq(topics), any(DescribeTopicsOptions.class)))
+            .thenReturn(describeTopicsResult(topics, 1));
+        when(adminClient.listOffsets(any(), any()))
+            .thenReturn(listOffsetsResult());
+        ListGroupsResult listGroupsResult = listGroupResult(groupId);
+        when(adminClient.listGroups(any(ListGroupsOptions.class))).thenReturn(listGroupsResult);
+        ListStreamsGroupOffsetsResult result = mock(ListStreamsGroupOffsetsResult.class);
+        Map<TopicPartition, OffsetAndMetadata> committedOffsetsMap = new HashMap<>();
+        committedOffsetsMap.put(new TopicPartition("topic1", 0), mock(OffsetAndMetadata.class));
+        when(adminClient.listStreamsGroupOffsets(ArgumentMatchers.anyMap())).thenReturn(result);
+        when(result.partitionsToOffsetAndMetadata(ArgumentMatchers.anyString())).thenReturn(KafkaFuture.completedFuture(committedOffsetsMap));
+
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
+        Map<String, Map<TopicPartition, OffsetAndMetadata>> resetResult = service.resetOffsets();
+
+        assertEquals(Set.of(groupId), resetResult.keySet());
+        assertEquals(Set.of(new TopicPartition(topics.get(0), 0)),
+            resetResult.get(groupId).keySet());
+
+        verify(adminClient, times(1)).describeStreamsGroups(List.of(groupId));
+        verify(adminClient, times(1)).describeTopics(eq(topics), any(DescribeTopicsOptions.class));
+        verify(adminClient, times(1)).listOffsets(any(), any());
+        verify(adminClient, times(1)).listStreamsGroupOffsets(any());
+
+        service.close();
+    }
+
+    @Test
+    public void testRetrieveInternalTopics() {
+        String groupId = "foo-group";
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete");
+        List<String> sourceTopics = List.of("source-topic1", "source-topic2");
+        List<String> repartitionSinkTopics = List.of("rep-sink-topic1", "rep-sink-topic2");
+        Map<String, StreamsGroupSubtopologyDescription.TopicInfo> stateChangelogTopics = Map.of(
+            groupId + "-1-changelog", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
+            "some-pre-fix" + "-changelog", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
+            groupId + "-2-changelog", mock(StreamsGroupSubtopologyDescription.TopicInfo.class));
+        Map<String, StreamsGroupSubtopologyDescription.TopicInfo> repartitionSourceTopics = Map.of(
+            groupId + "-1-repartition", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
+            groupId + "-some-thing", mock(StreamsGroupSubtopologyDescription.TopicInfo.class),
+            groupId + "-2-repartition", mock(StreamsGroupSubtopologyDescription.TopicInfo.class));
+
+
+        Map<String, StreamsGroupDescription> resultMap = new HashMap<>();
+        resultMap.put(groupId, new StreamsGroupDescription(
+            groupId,
+            0,
+            0,
+            0,
+            List.of(new StreamsGroupSubtopologyDescription("subtopology1", sourceTopics, repartitionSinkTopics, stateChangelogTopics, repartitionSourceTopics)),
+            List.of(),
+            GroupState.DEAD,
+            new Node(0, "localhost", 9092),
+            null));
+        DescribeStreamsGroupsResult result = mock(DescribeStreamsGroupsResult.class);
+        when(result.all()).thenReturn(KafkaFuture.completedFuture(resultMap));
+        when(ADMIN_CLIENT.describeStreamsGroups(ArgumentMatchers.anyCollection())).thenReturn(result);
+
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]));
+        Map<String, List<String>> internalTopics = service.retrieveInternalTopics(List.of(groupId));
+
+        assertNotNull(internalTopics.get(groupId));
+        assertEquals(4, internalTopics.get(groupId).size());
+        assertEquals(Set.of(groupId + "-1-changelog", groupId + "-2-changelog", groupId + "-1-repartition", groupId + "-2-repartition"),
+            new HashSet<>(internalTopics.get(groupId)));
+        assertFalse(internalTopics.get(groupId).stream().anyMatch(List.of("some-pre-fix-changelog", groupId + "-some-thing")::contains));
+        assertFalse(internalTopics.get(groupId).stream().anyMatch(sourceTopics::contains));
+        assertFalse(internalTopics.get(groupId).stream().anyMatch(repartitionSinkTopics::contains));
+
+        service.close();
+    }
+
+    @Test
+    public void testDeleteStreamsGroup() {
+        Admin adminClient = mock(KafkaAdminClient.class);
+        String groupId = "foo-group";
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete", "--delete-all-internal-topics");
+
+        DeleteStreamsGroupsResult deleteStreamsGroupsResult = mock(DeleteStreamsGroupsResult.class);
+        when(adminClient.deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class))).thenReturn(deleteStreamsGroupsResult);
+        when(deleteStreamsGroupsResult.deletedGroups()).thenReturn(Map.of(groupId, KafkaFuture.completedFuture(null)));
+        DeleteTopicsResult deleteTopicsResult = mock(DeleteTopicsResult.class);
+        when(deleteTopicsResult.all()).thenReturn(KafkaFuture.completedFuture(null));
+        when(adminClient.deleteTopics(ArgumentMatchers.anyCollection())).thenReturn(deleteTopicsResult);
+        DescribeStreamsGroupsResult describeStreamsGroupsResult = mock(DescribeStreamsGroupsResult.class);
+        when(describeStreamsGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(Map.of(groupId, mock(StreamsGroupDescription.class))));
+        when(adminClient.describeStreamsGroups(any())).thenReturn(describeStreamsGroupsResult);
+        ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
+        when(adminClient.listGroups(any())).thenReturn(listGroupsResult);
+        when(listGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(List.of(new GroupListing(groupId, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.EMPTY)))));
+
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
+        service.deleteGroups();
+
+        verify(adminClient, times(1)).listGroups(any(ListGroupsOptions.class));
+        verify(adminClient, times(1)).deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class));
+        verify(adminClient, times(1)).describeStreamsGroups(any());
+        // because of having 0 internal topics, we do not expect deleteTopics to be called
+        verify(adminClient, times(0)).deleteTopics(ArgumentMatchers.anyCollection());
+
+        service.close();
+    }
+
+    @Test
+    public void testDeleteNonStreamsGroup() {
+        Admin adminClient = mock(KafkaAdminClient.class);
+        String groupId = "foo-group";
+        List<String> args = List.of("--bootstrap-server", "localhost:9092", "--group", groupId, "--delete");
+
+        ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
+        when(adminClient.listGroups(any())).thenReturn(listGroupsResult);
+        when(listGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(List.of()));
+
+        StreamsGroupCommand.StreamsGroupService service = getStreamsGroupService(args.toArray(new String[0]), adminClient);
+        Map<String, Throwable> result = service.deleteGroups();
+
+        assertNotNull(result.get(groupId));
+        assertEquals("Group '" + groupId + "' does not exist or is not a streams group.",
+            result.get(groupId).getMessage());
+        assertInstanceOf(IllegalArgumentException.class, result.get(groupId));
+        verify(adminClient, times(1)).listGroups(any(ListGroupsOptions.class));
+        // we do not expect any further API to be called
+        verify(adminClient, times(0)).deleteStreamsGroups(eq(List.of(groupId)), any(DeleteStreamsGroupsOptions.class));
+        verify(adminClient, times(0)).describeStreamsGroups(any());
+        verify(adminClient, times(0)).deleteTopics(ArgumentMatchers.anyCollection());
+
+        service.close();
+    }
+
+    private ListGroupsResult listGroupResult(String groupId) {
+        ListGroupsResult listGroupsResult = mock(ListGroupsResult.class);
+        when(listGroupsResult.all()).thenReturn(KafkaFuture.completedFuture(List.of(
+            new GroupListing(groupId, Optional.of(GroupType.STREAMS), "streams", Optional.of(GroupState.DEAD))
+        )));
+        return listGroupsResult;
+    }
+
+    StreamsGroupCommand.StreamsGroupService getStreamsGroupService(String[] args) {
+        StreamsGroupCommandOptions opts = new StreamsGroupCommandOptions(args);
+        return new StreamsGroupCommand.StreamsGroupService(opts, ADMIN_CLIENT);
+    }
+
     StreamsGroupCommand.StreamsGroupService getStreamsGroupService(String[] args, Admin adminClient) {
         StreamsGroupCommandOptions opts = new StreamsGroupCommandOptions(args);
         return new StreamsGroupCommand.StreamsGroupService(opts, adminClient);
@@ -397,5 +458,43 @@ public class StreamsGroupCommandTest {
         assertEquals(Arrays.stream(exceptionMessage[1].split(","))
             .map(String::trim)
             .collect(Collectors.toSet()), validStates);
+    }
+
+    private DescribeStreamsGroupsResult describeStreamsResult(String groupId, GroupState groupState) {
+        StreamsGroupMemberDescription memberDescription = new StreamsGroupMemberDescription("foo", 0, Optional.empty(),
+            Optional.empty(), "bar", "baz", 0, "qux",
+            Optional.empty(), Map.of(), List.of(), List.of(),
+            new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()), new StreamsGroupMemberAssignment(List.of(), List.of(), List.of()),
+            false);
+        StreamsGroupDescription description = new StreamsGroupDescription(groupId,
+            0,
+            0,
+            0,
+            List.of(new StreamsGroupSubtopologyDescription("subtopologyId", List.of(), List.of(), Map.of(), Map.of())),
+            List.of(memberDescription),
+            groupState,
+            new Node(1, "localhost", 9092),
+            Set.of());
+        KafkaFutureImpl<StreamsGroupDescription> future = new KafkaFutureImpl<>();
+        future.complete(description);
+        return new DescribeStreamsGroupsResult(Map.of(groupId, future));
+    }
+
+    private DescribeTopicsResult describeTopicsResult(Collection<String> topics, int numOfPartitions) {
+        var topicDescriptions = topics.stream().collect(Collectors.toMap(Function.identity(),
+            topic -> new TopicDescription(topic, false, IntStream.range(0, numOfPartitions)
+                .mapToObj(i -> new TopicPartitionInfo(i, null, List.of(), List.of()))
+                .toList())));
+        return AdminClientTestUtils.describeTopicsResult(topicDescriptions);
+    }
+
+    private ListOffsetsResult listOffsetsResult() {
+        List<TopicPartition> topicPartitions = new ArrayList<>();
+        topicPartitions.add(new TopicPartition("topic1", 0));
+        ListOffsetsResult.ListOffsetsResultInfo resultInfo = new ListOffsetsResult.ListOffsetsResultInfo(100, System.currentTimeMillis(), Optional.of(1));
+        Map<TopicPartition, KafkaFuture<ListOffsetsResult.ListOffsetsResultInfo>> futures = topicPartitions.stream().collect(Collectors.toMap(
+            Function.identity(),
+            __ -> KafkaFuture.completedFuture(resultInfo)));
+        return new ListOffsetsResult(futures);
     }
 }
